# Garagem

./: db.sqlite3  pyproject.toml
config/: settings.py  urls.py
garagem/: admin.py  models.py  serializers.py  views.py
garagem/migrations/: 0001_initial.py  0002_remove_marca_nacionalidade_remove_veiculo_categoria_and_more.py  0002_rename_marca_marcas.py  0002_veiculo_acessorio.py  0003_marca_delete_marcas.py  0003_veiculo_imagem.py  0004_acessorio.py  0005_cor.py  0006_alter_cor_options_veiculo.py
garagem/models/: cor.py  modelo.py  veiculo.py
garagem/serializers/: modelo.py  veiculo.py
garagem/views/: categoria.py  cor.py  marca.py  modelo.py  veiculo.py
uploader/migrations/: 0001_initial.py
usuario/migrations/: 0001_initial.py
